Update to 4.5